# kissaten

./: .gitignore  ADDING_SCRAPERS.md  AGENTS.md  BEAN_DATA_FORMAT.md  QUICKSTART.md  README.md  SETUP.md  env.example  migrate_elevation.py  migrate_schema.py  nginx.kissaten.conf  pyproject.toml  shopifyscraperconversion.agent.md
analysis/: coffee_comparison.py
docs/: AI_SEARCH_CACHE.md  AI_VARIETAL_CATEGORIZATION.md  GEOGRAPHICAL_DATA.md  GUIDED_TASTING_PLAN.md  INCREMENTAL_DATABASE_UPDATES.md  PROXY_CONFIGURATION.md  TESTING.md
frontend/: .gitignore  README.md  bunfig.toml  components.json  drizzle.config.ts  package-scripts.md  package.json  svelte.config.js  test_api.js  vite.config.ts
scripts/: analyze_scraping_issues.py  capture_flavour_images.py  categorize_tasting_notes.py  check_directory_mismatches.py  check_roaster_name_mismatches.py  convert_images_to_jpg.sh  count_beans_from_json.py  deduplicate_farms.py  deduplicate_regions.py  fix_roaster_names.py  fix_tasting_notes.py  get_blog_posts.py  get_podcast_episodes.py  get_wikidata_ids.py  ingest_podcasts.py  migrate_standout_data.py  prioritize_shopify_migration.py  scrape_coffee_varietals.py  verify_directory_names.py
system/: kissaten-api.service  kissaten-frontend.service
tests/: conftest.py  test_ai_search_cache.py  test_api_brew_assistant.py  test_api_misc.py  test_api_roasters.py  test_beanconqueror_share.py  test_canonical_slug_grouping.py  test_diff_update_functionality.py  test_duplicate_origins.py  test_fts_feature.py  test_incremental_updates.py  test_invalid_regions.py  test_locations_api.py  (+14 more)
(+616 files in other folders)
